--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@contentful/app-sdk": "4.9.0",
     "@contentful/f36-components": "4.11.0",
     "@contentful/f36-tokens": "4.0.1",
+    "@contentful/f36-workbench": "^4.12.0",
     "@contentful/react-apps-toolkit": "^1.2.4",
     "contentful-management": "10.8.0",
     "emotion": "10.0.27",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "usehooks-ts": "^2.6.0"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
