--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@contentful/f36-tokens": "4.0.1",
     "@contentful/f36-workbench": "^4.12.0",
     "@contentful/react-apps-toolkit": "^1.2.4",
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/sortable": "^7.0.1",
     "contentful-management": "10.8.0",
     "emotion": "10.0.27",
     "react": "17.0.2",
